<resources>
    <string name="app_name">RickAndMortyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_character">Characters</string>
    <string name="title_location">Locations</string>
    <string name="title_episode">Episodes</string>

</resources>