<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/charactersFragment"
        android:icon="@drawable/ic_character"
        android:iconTint="#03A9F4"
        android:title="@string/title_character" />

    <item
        android:id="@+id/locationsFragment"
        android:icon="@drawable/ic_location"
        android:iconTint="#2196F3"
        android:title="@string/title_location" />
    <item
        android:title="@string/title_episode"
        android:icon="@drawable/ic_episodes"
        android:id="@+id/episodesFragment"/>

</menu>